[package]
name = "egui_markdown"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "A markdown parser and renderer for egui"
repository = "https://github.com/iamseeley/egui_markdown"
homepage = "https://github.com/iamseeley/egui_markdown"
documentation = "https://docs.rs/egui_markdown"
categories = ["gui", "graphics"]
keywords = ["egui", "markdown", "gui", "commonmark"]
include = ["**/*.rs", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
egui = { version = "0.33", default-features = false }
epaint = { version = "0.33", default-features = false }
egui_extras = { version = "0.33", default-features = false }
pulldown-cmark = "0.13.0"
syntect = { version = "5", optional = true, default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
eframe = { version = "0.33", default-features = true, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.33", features = ["syntect"] }
env_logger = "0.11"

[features]
default = ["syntax_highlighting"]
syntax_highlighting = ["egui_extras/syntect", "dep:syntect"]
images = ["egui_extras/image", "egui_extras/http"]
svg = ["egui_extras/svg"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[bench]]
name = "markdown"
harness = false
